--- a/index.html
+++ b/index.html
@@ -137,6 +137,17 @@
 
         <div class="log" id="activityLog" aria-live="polite"></div>
       </div>
+
+      <div class="card card-hover dice-placeholder">
+        <div class="panel-subhead">
+          <h3>Dice</h3>
+        </div>
+        <div class="dice-wrap">
+          <img class="dice-img" id="dice1" src="assets/img/dice/d1.svg" alt="Dice 1" width="48" height="48" data-value="1">
+          <img class="dice-img" id="dice2" src="assets/img/dice/d1.svg" alt="Dice 1" width="48" height="48" data-value="1">
+          <button class="btn small dice-roll-btn" id="btnRollDice" type="button" title="Roll dice">Roll Dice</button>
+        </div>
+      </div>
     </section>
 
     <!-- CENTER: Table -->
@@ -188,13 +199,6 @@
           </div>
         </div>
 
-        <div class="fx">
-          <div class="dice-wrap">
-            <img class="dice-img" id="dice1" src="assets/img/dice/d1.svg" alt="Dice 1" width="48" height="48" data-value="1">
-            <img class="dice-img" id="dice2" src="assets/img/dice/d1.svg" alt="Dice 1" width="48" height="48" data-value="1">
-            <button class="btn small dice-roll-btn" id="btnRollDice" type="button" title="Roll dice">Roll Dice</button>
-          </div>
-        </div>
       </div>
 
       <!-- Blackjack (shown when Blackjack selected) -->
