--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <video id="bootVideo" class="boot-video" autoplay muted playsinline preload="auto">
       <source src="assets/video/boot.mp4" type="video/mp4">
     </video>
-    <button class="boot-unmute" id="btnBootUnmute" type="button" aria-label="Unmute video" title="Click for sound">🔇</button>
+    <button class="boot-unmute" id="btnBootUnmute" type="button" aria-label="Unmute video" title="Sound on when video plays">🔊</button>
     <button class="boot-skip" id="btnSkipBoot" type="button" aria-label="Skip intro">Skip intro</button>
   </div>
 
