push card changes
changed

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
               <button class="btn btn-shine" id="btnBjHit" type="button" disabled>Hit</button>
               <button class="btn btn-shine" id="btnBjStand" type="button" disabled>Stand</button>
               <button class="btn btn-shine" id="btnBjDouble" type="button" disabled>Double</button>
+              <button class="btn btn-shine" id="btnBjSplit" type="button" disabled>Split</button>
             </div>
           </div>
           <div class="blackjack-balance">Chips: <span id="bjBalance">0</span></div>
