--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   </div>
 
   <div class="toast-container" id="toastContainer" aria-live="polite"></div>
+  <div class="win-celebration" id="winCelebration" aria-hidden="true"></div>
 
   <header class="topbar" role="banner">
     <div class="brand">
