--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             <ul class="multiplayer-roster" id="multiplayerRoster"></ul>
             <div class="multiplayer-table-actions">
               <button class="btn small primary btn-shine" id="btnMpStartHand" type="button">Start hand</button>
+              <button class="btn small btn-shine" id="btnMpInvite" type="button" title="Copy invite link">Invite</button>
               <button class="btn small btn-shine" id="btnMpLeaveTable" type="button">Leave table</button>
             </div>
           </div>
